--- a/Edunomics App/Base.lproj/Main.storyboard
+++ b/Edunomics App/Base.lproj/Main.storyboard
@@ -1,24 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Edunomics_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VGr-Eb-Cud">
+                                <rect key="frame" x="0.0" y="44" width="414" height="294"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="M0g-Ha-6gY">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cA2-pB-h7X">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="c0I-OV-nIL">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="kL0-Rx-iIH"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ZhO-LH-gz6"/>
+                                </connections>
+                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VMl-kC-5LL">
+                                <rect key="frame" x="0.0" y="338" width="414" height="220"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="UvO-r0-q5Q"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUE-qh-XYJ">
+                                <rect key="frame" x="10" y="348" width="164" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="164" id="YMB-pm-rGr"/>
+                                    <constraint firstAttribute="height" constant="30" id="eFy-3O-o8a"/>
+                                </constraints>
+                                <state key="normal" title="Select picture to upload"/>
+                                <connections>
+                                    <action selector="select_pic:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0gm-up-MbX"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AWt-j2-8O0">
+                                <rect key="frame" x="0.0" y="558" width="414" height="304"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lja-nX-DAu">
+                                        <rect key="frame" x="162" y="137" width="90" height="30"/>
+                                        <state key="normal" title="Upload Story"/>
+                                        <connections>
+                                            <action selector="upload_pictureAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fkV-oc-NIu"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="lja-nX-DAu" firstAttribute="centerX" secondItem="AWt-j2-8O0" secondAttribute="centerX" id="MQc-ro-TVQ"/>
+                                    <constraint firstItem="lja-nX-DAu" firstAttribute="centerY" secondItem="AWt-j2-8O0" secondAttribute="centerY" id="tSp-Xx-JJM"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cyG-Af-kee">
+                                <rect key="frame" x="30" y="384" width="354" height="168"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="AWt-j2-8O0" firstAttribute="top" secondItem="cyG-Af-kee" secondAttribute="bottom" constant="6" id="1am-Ir-fdC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cyG-Af-kee" secondAttribute="trailing" constant="30" id="2rJ-Le-9VF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AWt-j2-8O0" secondAttribute="bottom" id="Dke-6C-IY0"/>
+                            <constraint firstItem="zUE-qh-XYJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Giu-46-P38"/>
+                            <constraint firstItem="AWt-j2-8O0" firstAttribute="top" secondItem="VMl-kC-5LL" secondAttribute="bottom" id="H6d-yQ-hb0"/>
+                            <constraint firstItem="VMl-kC-5LL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HeB-tL-O8d"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VMl-kC-5LL" secondAttribute="trailing" id="HvZ-0a-FSd"/>
+                            <constraint firstItem="VMl-kC-5LL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="PTy-gP-uYN"/>
+                            <constraint firstItem="zUE-qh-XYJ" firstAttribute="top" secondItem="VGr-Eb-Cud" secondAttribute="bottom" constant="10" id="XEe-JO-QBw"/>
+                            <constraint firstItem="VGr-Eb-Cud" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XkV-lS-tRy"/>
+                            <constraint firstItem="cyG-Af-kee" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="eTq-GX-Ohs"/>
+                            <constraint firstItem="VGr-Eb-Cud" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sdD-K2-oFZ"/>
+                            <constraint firstItem="cyG-Af-kee" firstAttribute="top" secondItem="zUE-qh-XYJ" secondAttribute="bottom" constant="6" id="uY4-vM-DIg"/>
+                            <constraint firstItem="AWt-j2-8O0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uo6-Xh-7Sw"/>
+                            <constraint firstItem="VMl-kC-5LL" firstAttribute="top" secondItem="VGr-Eb-Cud" secondAttribute="bottom" id="w5K-MQ-Lgj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VGr-Eb-Cud" secondAttribute="trailing" id="wyo-ly-p4t"/>
+                            <constraint firstItem="VMl-kC-5LL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="z7R-PK-uao"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AWt-j2-8O0" secondAttribute="trailing" id="zaF-Qw-xmj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="previewImageView" destination="cyG-Af-kee" id="haL-xU-NtR"/>
+                        <outlet property="storyCollectionView" destination="VGr-Eb-Cud" id="5Ar-Mb-mQ4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="75.669642857142847"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
